--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         function (message) {
             alert(message);
             setTimeout(function () {
-                window.location.href = 'code.html';
+                window.location.href = 'tow.html';
             }, 2000);
              } );}
 
