--- a/tow.html
+++ b/tow.html
@@ -88,7 +88,7 @@
               alert(message);
               // انتقال به صفحه tow.html پس از 2000 میلی‌ثانیه (2 ثانیه)
               setTimeout(function () {
-                  window.location.href = 'index.html';
+                  window.location.href = 'code.html';
               }, 2000);
           }
       );
