--- a/code.html
+++ b/code.html
@@ -85,7 +85,7 @@
               alert(message);
               // انتقال به صفحه tow.html پس از 2000 میلی‌ثانیه (2 ثانیه)
               setTimeout(function () {
-                  window.location.href = 'tow.html';
+                  window.location.href = 'index.html';
               }, 2000);
           }
       );
