--- a/tow.html
+++ b/tow.html
@@ -37,6 +37,11 @@
 
 
         <button class="submit-btn" onclick="redirectToCodePage()"> بعدی </button>
+        
+        <p style="font-weight: bold;">
+             گذرواژه ندارید؟ <span class="blue-link"><a href="code.html">ورود با کد </a></span>
+        </p>
+
     </div>
 
 
